Fix issues on small phones

--- a/style.css
+++ b/style.css
@@ -45,6 +45,18 @@ body * {
   text-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
 }
 
+@media screen and (min-width: 774px) {
+  #resume-direct {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 773px) {
+  #resume-modal {
+    display: none;
+  }
+}
+
 .title {
   font-variant: small-caps;
 }
@@ -142,20 +154,18 @@ body * {
   margin-bottom: 1em;
 }
 
-.card {
-  -webkit-box-shadow: 1px 2px 3px #000;
-  box-shadow: 1px 2px 3px #f00;
-  background-color: #262a30;
-  border: 5px solid #f00;
-  border-radius: 10px;
-  display: inline-block;
-  margin: auto;
-  padding-left: 3em;
-  padding-right: 3em;
-}
-
-.card:hover {
-  background-color: #2a1010;
+@media screen and (min-width: 480px) {
+  .card {
+    -webkit-box-shadow: 1px 2px 3px #000;
+    box-shadow: 1px 2px 3px #f00;
+    background-color: #262a30;
+    border: 5px solid #f00;
+    border-radius: 10px;
+    display: inline-block;
+    margin: auto;
+    padding-left: 3em;
+    padding-right: 3em;
+  }
 }
 
 .card span {
